syntax = "proto3";

package proto;

service GreetService {
    rpc greet (GreetRequest) returns (GreetResponse);
}

message GreetRequest {
}

message GreetResponse {
    string message = 1;
}
